[package]
name = "bdc"
version = "0.1.0"
edition = "2024"
authors = ["Dimka <dimkayilrit@gmail.com>"]
description = "CLI tool to get USD to NGN exchange rate in real time"
license = "MIT"
repository = "https://github.com/dimka90/bdc.git"

[dependencies]
clap = "4.5.48"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"